<resources>
    <string name="app_name">Zing Buisness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zing">zing</string>
    <string name="restaurant_partner">Restaurant Partner</string>
    <string name="break_queue">Break the Queue.</string>
    <string name="order_id">Order</string>
    <string name="order_id_">Order ID: </string>
    <string name="date">Date: </string>
    <string name="total_earnings">Total Earnings</string>
    <string name="total_orders">Total Orders</string>
    <string name="amount">₹100</string>
    <string name="_time">Time: </string>
    <string name="number">Number</string>
    <string name="mobile_temp">8305809059</string>
    <string name="time_">04:39 PM</string>
    <string name="date_">12.03.21</string>
    <string name="order_temp_id">#BD001</string>
    <string name="order_temp_id_">#001</string>
    <string name="get_started">Get Started</string>
    <string name="wifi_setting">Wifi Settings</string>
    <string name="bluetooth_setting">Bluetooth Settings</string>
    <string name="setting">Settings</string>
    <string name="india">+91</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_in">Sign In</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_email">Login with Email</string>
    <string name="need_help"><u>Need help with login?</u></string>
    <string name="register_as_partner">Register as a Partner</string>
    <string name="logout">Logout</string>
    <string name="transactions">Transactions</string>
    <string name="logout_">Logout?</string>
    <string name="search_by_orderId">Search by Order ID</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="takeaway">(Takeaway)</string>
    <string name="out_of_stock"><u>Out of Stock?</u></string>
    <string name="item">Items</string>
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="facing_issues">Facing Issues?</string>
    <string name="issue_number">Don\'t let problems hold you back – connect with our Zing experts on <b>+91 6452717191</b> and find solutions that work for you!</string>
    <string name="from_user">from Himanshu at 08:00 PM</string>
    <string name="branch_restaurant">Branch Restaurant</string>
    <string name="maximise_efficiency">Maximise efficiency, streamline operations</string>
    <string name="chinese">Chinese &amp; North Indian.</string>
    <string name="mobile_number">+91 1234567890</string>
    <string name="enter_otp">Enter your phone number and we will send you an OTP to continue</string>
    <string name="address_restaurant">315 Yellowstone Ave Inside The Holiday Inn West Yellowstone, West Yellowstone, MT 59758</string>
    <string name="test_printer">Test Printer</string>
    <string name="permission">Permission</string>
    <string name="legal">Legal</string>
    <string name="food_name">Chicken Shawarma</string>
    <string name="order_prepared">Order Prepared</string>
    <string name="reject">Reject Order (02:19)</string>
    <string name="reject_order">Reject Order </string>
    <string name="cancel_all">Check Full Order</string>
    <string name="cancel_particular">Cancel a Particular Item(s)</string>
    <string name="qty">Qty</string>
    <string name="whoops">WHOOPS!\nBoth your Bluetooth and Wifi is not working!</string>
    <string name="dummy">Print Dummy KOT</string>
    <string name="closing_account">Closing your account Zing could mean closing the door to a whole community of potential clients. Are you sure you want to deactivate your account?</string>
    <string name="are_you">Your Zing account will miss you if you logout now. Are you sure you want to logout of your Zing account?</string>
    <string name="do_you_want_print">Do you want to print a dummy kitchen ordering ticket for testing the thermal printer?</string>
    <string name="request_deactivated">Request to Deactivate Account</string>
    <string name="request_deactivated_">Request to Deactivate Account?</string>
    <string name="cancelling_order">Cancelling the Order?</string>
    <string name="item_not_available">Item not available</string>
    <string name="mark_as">Mark the item that is not available</string>
    <string name="not_accept">Not accepting orders currently</string>
    <string name="delivery">Delivery Restrictions</string>
    <string name="too_order">Too many orders</string>
    <string name="items_is">Item(s) is not available</string>
    <string name="canel_refund">Cancel &amp; Refund</string>
    <string name="select_the_reason">Select the reason for cancelling this order</string>
    <string name="keep">Keep Order</string>
    <string name="deactivated_">Deactivate Account</string>
    <string name="order_no">Order #1B12</string>
    <string name="order_no_">#1B12</string>
    <string name="tap_to_view"><u>Tap to view</u></string>
    <string name="time">04:49 PM</string>
    <string name="view">View</string>
    <string name="money">₹100</string>
    <string name="from_user_">from Himanshu</string>
    <string name="order_will_appear">Your Orders will appear here!</string>
    <string name="order_will_appear_history">Your Orders history will appear here!</string>
    <string name="read_the_instructions">Read the <a href='https://www.google.com'>Instructions</a> and <a href='https://www.google.com'>T/C</a> </string>
    <string name="print_kot">Print KOT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>