<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.FirebaseNotificationActionActivity">

        <TextView
            android:id="@+id/branding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/clash_display"
            android:gravity="center"
            android:text="@string/zing"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/duplet_bold"
            android:text="@string/order_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="@id/branding"
            app:layout_constraintTop_toBottomOf="@id/branding" />

        <TextView
            android:id="@+id/oderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/duplet_bold"
            android:text="@string/order_temp_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toEndOf="@id/order"
            app:layout_constraintTop_toTopOf="@id/order" />


        <TextView
            android:id="@+id/takeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/duplet_semibold"
            android:text="@string/takeaway"
            android:textSize="16sp"
            android:linksClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/branding"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>