<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signUp.GetStartedFragment">

        <TextView
            android:id="@+id/branding"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/zing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30sdp"
            android:fontFamily="@font/clash_display"/>

        <TextView
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_queue"
            app:layout_constraintTop_toBottomOf="@id/branding"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/duplet_bold"
            app:layout_constraintStart_toStartOf="@id/branding"
            app:layout_constraintEnd_toEndOf="@id/branding"/>

        <ImageView
            android:id="@+id/snacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/group_3430"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/queue" />


        <TextView
            android:id="@+id/tnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/duplet_semibold"
            android:text="@string/read_the_instructions"
            android:textSize="16sp"
            android:linksClickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/snacks"
            android:layout_margin="@dimen/_25sdp"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tnc"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="0dp"
            app:rippleColor="@android:color/transparent"
            android:fontFamily="@font/duplet_semibold"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>