<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/branding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/clash_display"
        android:gravity="center"
        android:text="@string/zing"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/branch_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/duplet_bold"
        android:text="@string/maximise_efficiency"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/branding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/no_internet"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_300sdp"
        android:src="@drawable/no_bluetooth"
        app:layout_constraintTop_toBottomOf="@id/branch_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_25sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_internet"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:text="@string/wifi_setting"
        android:paddingVertical="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="0dp"
        app:rippleColor="@android:color/transparent"
        android:fontFamily="@font/duplet_semibold"/>

</androidx.constraintlayout.widget.ConstraintLayout>