<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/branding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/clash_display"
            android:gravity="center"
            android:text="@string/zing"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/branch_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/duplet_bold"
            android:text="@string/maximise_efficiency"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/branding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/combined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/branch_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/no_bluetooth"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_250sdp"
                android:src="@drawable/no_internet"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp" />
            <ImageView
                android:id="@+id/no_internet"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/no_bluetooth"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_25sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/whoops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/duplet_bold"
            android:text="@string/whoops"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/combined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/whoops"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:text="@string/setting"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="0dp"
            app:rippleColor="@android:color/transparent"
            android:fontFamily="@font/duplet_semibold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>